[package]
name = "tetrs"
version = "0.1.0"
authors = ["joe"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = {git = "https://github.com/Rust-SDL2/rust-sdl2"}
rand = "0.7.3"

[features]
default = ["sdl2/image", "sdl2/ttf"]